--- a/http_request/pyproject.toml
+++ b/http_request/pyproject.toml
@@ -1,15 +1,20 @@
-[tool.poetry]
+[project]
 name = "http_request"
 version = "0.0.0"
 description = ""
-authors = ["David Liu <david.yx.liu@oracle.com>"]
-
-[tool.poetry.dependencies]
-python = "^3.7"
-requests = "^2.28.1"
-
-[tool.poetry.dev-dependencies]
+authors = [
+    {name = "David Liu", email = "david-khala@hotmail.com"},
+]
+dependencies = [
+    "requests>=2.28.1",
+]
+requires-python = ">=3.9"
+readme = "README.md"
+license = {text = "MIT"}
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-pep517>=1.0.0"]
+build-backend = "pdm.pep517.api"
+
+[tool]
+[tool.pdm]
