--- a/http_request/pyproject.toml
+++ b/http_request/pyproject.toml
@@ -1,20 +1,16 @@
-[project]
-name = "http_request"
-version = "0.0.0"
+[tool.poetry]
+name = "@davidkhala/http-request"
+version = "0.1.0"
 description = ""
-authors = [
-    {name = "David Liu", email = "david-khala@hotmail.com"},
-]
-dependencies = [
-    "requests>=2.28.1",
-]
-requires-python = ">=3.9"
+authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
-license = {text = "MIT"}
+packages = [{include = "@davidkhala"}]
+
+[tool.poetry.dependencies]
+python = "^3.11"
+requests = "^2.28.2"
+
 
 [build-system]
-requires = ["pdm-pep517>=1.0.0"]
-build-backend = "pdm.pep517.api"
-
-[tool]
-[tool.pdm]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
