--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,16 @@
 [tool.poetry]
-name = "http-request"
-version = "0.1.0"
+name = "khala-python-utils"
+version = "0.0.1"
 description = ""
 authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
-packages = [{include = "@davidkhala"}]
+packages = [{ include = "http_request" }, { include = "syntax" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.28.2"
 
+[tool.poetry.group.dev.dependencies]
 
 [build-system]
 requires = ["poetry-core"]
