--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "khala-python-utils"
-version = "0.0.1"
+version = "0.0.2"
 description = ""
 authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
@@ -9,6 +9,7 @@ packages = [{ include = "http_request" }, { include = "syntax" }]
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.28.2"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 
