--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{ include = "http_request" }, { include = "syntax" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-requests = "^2.28.2"
+requests = ">=2"
 python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
