--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ requests = ">=2"
 python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
+flake8=">=6"
+pytest=">=7"
+
 
 [build-system]
 requires = ["poetry-core"]
