--- a/.github/workflows/libs.yml
+++ b/.github/workflows/libs.yml
@@ -19,12 +19,10 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@main
       with:
-        python-version: "3.13"
+        python-version: "3.12"
     - name: Install Poetry
       uses: snok/install-poetry@main
     - name: Install dependencies
       run: poetry install
-    - run: pipx install pytest
-    - name: Test with pytest
-      run: pytest
+    - run: poetry run pytest
       working-directory: test
