--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "davidkhala.utils"
-version = "0.0.4"
+version = "0.0.5"
 description = "@davidkhala/python-utils"
 authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
@@ -9,7 +9,7 @@ packages = [{ include = "http_request" }, { include = "syntax" }]
 [tool.poetry.dependencies]
 python = "^3.13"
 requests = "*"
-
+sqlparse = "*"
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
 python-dotenv = "*"
