try default python test

--- a/.github/workflows/compatible.yml
+++ b/.github/workflows/compatible.yml
@@ -17,4 +17,5 @@ jobs:
       - uses: actions/setup-python@main
         with:
           check-latest: true
+      # Warning: The `python-version` input is not set.  The version of Python currently in `PATH` will be used.
       - run: python --version
