--- a/.github/workflows/libs.yml
+++ b/.github/workflows/libs.yml
@@ -8,10 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - name: Set up Python
-        uses: actions/setup-python@main
-        with:
-          python-version: "3.13"
+      - name: check Python
+        run: python --version
       - name: Install Poetry
         uses: snok/install-poetry@main
       - name: Install dependencies
