--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "davidkhala.utils"
-version = "0.0.8"
+version = "0.1.0"
 description = "@davidkhala/python-utils"
 authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
-packages = [{ include = "http_request" }, { include = "syntax" }]
+packages = [{ include = "davidkhala" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
