--- a/.github/workflows/libs.yml
+++ b/.github/workflows/libs.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@main
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --all-extras
       - run: poetry run pytest
         working-directory: test
