align to davidkhala@poetry-buildpack

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
 packages = [{ include = "davidkhala" }]
 
+[tool.poetry.scripts]
+test = "pytest:main"
+
 [tool.poetry.dependencies]
 python = "^3.10"
 # for extras
