--- a/.github/workflows/libs.yml
+++ b/.github/workflows/libs.yml
@@ -8,9 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - name: Install Poetry
-        uses: snok/install-poetry@main
-      - name: Install dependencies
-        run: poetry install --all-extras
-      - run: poetry run pytest
-        working-directory: test
+      - uses: davidkhala/poetry-buildpack@main
+        with:
+          test-entry-point: test
+      
