--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
-      - name: Install Poetry
-        uses: snok/install-poetry@main
+      - uses: snok/install-poetry@main
       - run: poetry build
       - run: poetry config http-basic.pypi __token__ ${{secrets.PYPI_TOKEN}}
       - run: poetry publish
