--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.10"
 # for extras
 requests = { version = "*", optional = true }
 sqlparse = { version = "*", optional = true }
+python-dotenv = { version = "*", optional = true }
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
 python-dotenv = "*"
@@ -21,6 +22,7 @@ python-dotenv = "*"
 [tool.poetry.extras]
 sql = ["sqlparse"]
 http_request = ["requests"]
+poetry = ["python-dotenv"]
 
 [build-system]
 requires = ["poetry-core"]
