--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,26 @@
 [tool.poetry]
 name = "davidkhala.utils"
-version = "0.2.5"
+version = "0.2.6"
 description = "@davidkhala/python-utils"
 authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
 packages = [{ include = "davidkhala" }]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.9, <3.14"
 # for extras
 requests = { version = "*", optional = true }
 sqlparse = { version = "*", optional = true }
 python-dotenv = { version = "*", optional = true }
 pyinstaller = { version = "*", optional = true } # python <3.14
+
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
 python-dotenv = "*"
+
+[tool.poetry.scripts]
+build-poetry = "poetry:build"
+clean-poetry = "poetry:clean"
 
 [tool.poetry.extras]
 sql = ["sqlparse"]
