--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -9,9 +9,7 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@main
-      - run: |
-          . ./poetry/admin.ps1
-          Install-Poetry
+      - run: ./poetry/admin.ps1 Install-Poetry
       - run: |
           poetry install --extras poetry
       - run: |
