--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -7,10 +7,11 @@ jobs:
     steps:
       - uses: actions/checkout@main
       - run: ./poetry/admin.ps1 Install-Poetry
-      - run: poetry install --extras poetry
-        shell: bash
-      - run: poetry run python tests/poetry/test_.py
-        shell: bash
+      - run: |
+          & "$env:APPDATA\Python\Scripts\poetry" install --extras poetry
+      - run: |
+          & "$env:APPDATA\Python\Scripts\poetry" run python tests/poetry/test_.py
+        
   ubuntu:
     runs-on: ubuntu-latest
     steps:
