--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [tool.poetry]
 name = "davidkhala.utils"
-version = "0.3.1"
+version = "0.3.2"
 description = "@davidkhala/python-utils"
 authors = ["David Liu <david-khala@hotmail.com>"]
 readme = "README.md"
 packages = [{ include = "davidkhala" }]
 
 [tool.poetry.dependencies]
-python = "^3.9, <3.14"
+python = "^3.9"
 # for extras
 requests = { version = "*", optional = true }
 sqlparse = { version = "*", optional = true }
 python-dotenv = { version = "*", optional = true }
-pyinstaller = { version = "*", optional = true } # python <3.14
+pyinstaller = { version = "*", optional = true, python = "<3.14"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "*"
