--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,33 @@
-[tool.poetry]
+[project]
 name = "davidkhala.utils"
-version = "0.4.0"
+version = "0.4.1"
 description = "@davidkhala/python-utils"
-authors = ["David Liu <david-khala@hotmail.com>"]
+authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
+requires-python = ">=3.10"
 readme = "README.md"
-packages = [{ include = "davidkhala" }]
 
-[tool.poetry.dependencies]
-python = "^3.9"
-# for extras
-requests = { version = "*", optional = true }
-sqlparse = { version = "*", optional = true }
-python-dotenv = { version = "*", optional = true }
-pyinstaller = { version = "*", optional = true, python = "<3.14"}
-
-[tool.poetry.group.dev.dependencies]
-pytest = "*"
-python-dotenv = "*"
-
-[tool.poetry.scripts]
-build-poetry = "poetry:build"
-clean-poetry = "poetry:clean"
-
-[tool.poetry.extras]
+[project.optional-dependencies]
 sql = ["sqlparse"]
 http_request = ["requests"]
 poetry = ["python-dotenv"]
-build = ["pyinstaller"]
+build = ["pyinstaller ; python_version < '3.14'"]
+
+[project.scripts]
+build-poetry = "poetry:build"
+clean-poetry = "poetry:clean"
+
+[dependency-groups]
+dev = [
+    "pytest",
+    "python-dotenv",
+]
+
+[tool.hatch.build.targets.sdist]
+include = ["davidkhala"]
+
+[tool.hatch.build.targets.wheel]
+include = ["davidkhala"]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
