--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,11 +8,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        version: ['3.9', '3.x']
+        version: ['3.10', '3.x']
     runs-on: ${{matrix.os}}
     steps:
       - uses: actions/checkout@main
-      - uses: davidkhala/poetry-buildpack@main
+      - uses: davidkhala/uv-buildpack@main
         with:
           test-entry-point: pytest --ignore=tests/poetry
           version: ${{matrix.version}}
