--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "davidkhala.utils"
-version = "0.6.0"
+version = "0.6.1"
 description = "@davidkhala/python-utils"
 authors = [{ name = "David Liu", email = "david-khala@hotmail.com" }]
 requires-python = ">=3.11"
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [project.optional-dependencies]
 sql = ["sqlparse"]
+geo = ['numpy']
 http_request = ["requests"]
 poetry = ["python-dotenv"]
 build = ["pyinstaller ; python_version < '3.14'"]
