--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: actions/checkout@main
       - uses: davidkhala/uv-buildpack@main
         with:
-          test-entry-point: pytest --ignore=tests/poetry --ignore=tests/http
+          test-entry-point: pytest --ignore=tests/poetry
           version: ${{matrix.version}}
           tests: .
